--- a/OSS/typo3-plugins/rscal/trunk/.project
+++ b/OSS/typo3-plugins/rscal/trunk/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>rscal</name>
+	<name>Typo3-rscal</name>
 	<comment></comment>
 	<projects>
 	</projects>
